<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="courseNotice"
            type="org.devio.as.proj.biz_home.model.CourseNotice" />

        <variable
            name="userProfile"
            type="org.devio.as.proj.service_login.UserProfile" />

        <import type="android.text.TextUtils" />

        <import type="org.devio.as.proj.biz_home.profile.ProfileUtil" />

        <import type="android.view.View" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_avatar_default"
                app:circleUrl="@{userProfile.avatar}"
                tools:src="@drawable/ic_avatar_default" />


            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toRightOf="@+id/user_avatar"
                android:ellipsize="end"
                android:maxLength="10"
                android:singleLine="true"
                android:text="@{userProfile.login?userProfile.userName:@string/profile_not_login}"
                android:textColor="@color/color_000"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="开源上神" />


            <TextView
                android:id="@+id/login_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toRightOf="@+id/user_avatar"
                android:text="@{userProfile.login?@string/profile_login_desc_welcome_back:@string/profile_login_desc}"
                android:textColor="@color/color_999"
                android:textSize="@dimen/sp_12"
                tools:text="@string/profile_login_desc_welcome_back" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tab_item_collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{ProfileUtil.INSTANCE.spannableTabItem(userProfile.favoriteCount,@string/profile_tab_item_collection)}"
                android:textColor="@color/color_333"
                android:textSize="@dimen/sp_13"
                tools:text="40\n收藏" />


            <TextView
                android:id="@+id/tab_item_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{ProfileUtil.INSTANCE.spannableTabItem(userProfile.browseCount,@string/profile_tab_item_history)}"
                android:textColor="@color/color_333"
                android:textSize="@dimen/sp_13"
                tools:text="40\n历史浏览" />


            <TextView
                android:id="@+id/tab_item_learn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{ProfileUtil.INSTANCE.spannableTabItem(userProfile.learnMinutes,@string/profile_tab_item_learn)}"
                android:textColor="@color/color_333"
                android:textSize="@dimen/sp_13"
                tools:text="40\n学习时长" />
        </LinearLayout>


        <org.devio.hi.ui.banner.HiBanner
            android:id="@+id/hi_banner"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="25dp"
            android:visibility="gone"
            app:autoPlay="true"
            app:loop="true"
            tools:visibility="visible" />


        <LinearLayout
            android:id="@+id/ll_notice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <org.devio.hi.ui.icfont.IconFontTextView
                android:id="@+id/item_course"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/item_notify"
                android:textColor="@color/color_444"
                android:textSize="@dimen/sp_14" />

            <!--        <View-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_weight="1"-->
            <!--            android:layout_height="1px"></View>-->
            <Space
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/notify_count"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:background="@drawable/bg_red_circle"
                android:gravity="center"
                android:text="@{String.valueOf(courseNotice.total)}"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_10"
                android:visibility="@{courseNotice.total>0?View.VISIBLE:View.GONE}"
                tools:text="10"
                tools:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="24dp"
            android:background="@color/color_eee" />


        <org.devio.hi.ui.icfont.IconFontTextView
            android:id="@+id/item_collection"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:gravity="center_vertical"
            android:text="@string/item_collection"
            android:textColor="@color/color_444"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="24dp"
            android:background="@color/color_eee" />


        <org.devio.hi.ui.icfont.IconFontTextView
            android:id="@+id/item_adress"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:gravity="center_vertical"
            android:text="@string/item_address"
            android:textColor="@color/color_444"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="24dp"
            android:background="@color/color_eee" />


        <org.devio.hi.ui.icfont.IconFontTextView
            android:id="@+id/item_history"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:gravity="center_vertical"
            android:text="@string/item_history"
            android:textColor="@color/color_444"
            android:textSize="@dimen/sp_14" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="24dp"
            android:background="@color/color_eee" />


        <org.devio.hi.ui.icfont.IconFontTextView
            android:id="@+id/item_playground"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:gravity="center_vertical"
            android:text="@string/item_playground"
            android:textColor="@color/color_444"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
    </ScrollView>
</layout>